--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe Game</title>
+    <!-- linking style.css -->
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <!-- section contains headings for game name and game status,
