--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
         <div id="cell-8" class="cell"></div>
       </div>
       <h2 class="gameStatus"></h2>
-      <button class="restartBtn">Restart Game</button>
+      <button class="restartBtn" onclick="restartBoard()">Restart Game</button>
     </section>
     <!-- section ends -->
+    <script src="/javaScript/script.js"></script>
   </body>
 </html>
