--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="icon" href="/assets/xo.jpg" type="image">
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" href="./assets/xo.jpg" type="image">
   </head>
   <body>  
      <main>
@@ -44,6 +44,6 @@
     </section>
     <!-- section ends -->
 </main>
-    <script src="/javaScript/script.js"></script>
+    <script src="./javaScript/script.js"></script>
   </body>
 </html>
